fixed overlapped header and search bar

--- a/app/globals.css
+++ b/app/globals.css
@@ -32,7 +32,7 @@ body {
 
 .header {
   position: fixed;
-  z-index: 10;
+  z-index: 100;
 }
 
 /* styles/scrollbarStyles.css */
